Fix navbar/footer clipping page and add spacing
I also removed the frivolous headers from the region page.

--- a/less/components/regions.less
+++ b/less/components/regions.less
@@ -6,6 +6,9 @@
     @selected-color: #fff;
     @deselected-color: #eee;
 
+    margin-top: @spacer;
+    margin-bottom: @spacer*3;
+
     label {
         font-size: 1em;
         color:@body-foreground-color;
