--- a/less/components/search.less
+++ b/less/components/search.less
@@ -3,7 +3,8 @@
 @import "../datatype-colors";
 
 .search-fullscreen {
-    padding-top: @spacer;
+    padding-top: 2em;
+    padding-bottom: 2em;
     font-size: 1.05em;
     width: 100%;
 
