--- a/less/components/templates.less
+++ b/less/components/templates.less
@@ -28,8 +28,8 @@
 
 
 .template-component-container {
-
     width: 100%;
+    padding-bottom: @spacer*2;
 
     .preview {
         max-width: 60vw;
